# Suriza-solver

./: .gitignore  Cargo.toml  README.md  suriza.py
src/: algorithm.rs  grbl.rs  lib.rs
src/data/: cell.rs  cell_index.rs  cells.rs  constraint.rs  corner_direction.rs  direction.rs  edge.rs  edge_direction.rs  edge_index.rs  edges.rs  horizontal_direction.rs  intersection_index.rs  mod.rs  size.rs  vertical_direction.rs
